--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.12.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
